# Hackathon-II

Phase_II/: .gitignore  AGENTS.md
Phase_III-(todo-chatbot)/: BROWSER_TESTING_NOW.md  BROWSER_TEST_RESULTS.md  BUGFIX_MOCK_RUNNER.md  CHAT_AUTH_TEST_RESULTS.md  CHAT_NOT_RESPONDING_FIX.md  DEPLOYMENT.md  QUICK-DEPLOY.md  (+11 more)
to_do_phase_1/: .gitignore  README.md  main.py  pyproject.toml
to_do_phase_1/.claude/agents/: code-reviewer.md  spec-writer.md
to_do_phase_1/.claude/skills/: python_cli.md  python_crud.md
to_do_phase_1/.specify/memory/: constitution.md
to_do_phase_1/history/prompts/001-todo-app/: 001-todo-console-app-spec.spec.prompt.md  002-todo-console-app-plan.plan.prompt.md  003-todo-console-app-tasks.tasks.prompt.md  004-todo-app-phase1-setup.implement.prompt.md  005-todo-app-phase2-foundational.implement.prompt.md  006-todo-app-us1-add-task.implement.prompt.md  007-todo-app-complete.implement.prompt.md
to_do_phase_1/history/prompts/constitution/: 001-todo-app-constitution-creation.constitution.prompt.md
to_do_phase_1/specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
to_do_phase_1/specs/001-todo-app/checklists/: requirements.md
to_do_phase_1/specs/001-todo-app/contracts/: service-contracts.md
to_do_phase_1/src/: __init__.py
to_do_phase_1/src/cli/: __init__.py  __main__.py  app.py
to_do_phase_1/src/models/: __init__.py  task.py
to_do_phase_1/src/services/: __init__.py  todo_service.py
to_do_phase_1/src/utils/: __init__.py  validators.py
to_do_phase_1/tests/unit/: test_task.py  test_todo_service.py
(+206 files in other folders)
