[project]
name = "todo-app"
version = "0.1.0"
requires-python = ">=3.13"
description = "Simple in-memory todo console application"
readme = "README.md"
authors = [
    {name = "Todo App Team"}
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
